istio-metrics/ambient-auth/auth-policies.yaml
# Copyright 2025 Defense Unicorns
# SPDX-License-Identifier: AGPL-3.0-or-later OR LicenseRef-Defense-Unicorns-Commercial

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-tenant-gateway
  namespace: nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  rules:
    - from:
        - source:
            namespaces: ["istio-tenant-gateway"]
      to:
        - operation:
            ports: ["8080"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-monitoring
  namespace: nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  rules:
    - from:
        - source:
            namespaces: ["monitoring"]
      to:
        - operation:
            ports: ["8080"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-foo
  namespace: nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  rules:
    - from:
        - source:
            namespaces: ["foo"]
      to:
        - operation:
            ports: ["80"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-bar
  namespace: nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  rules:
    - from:
        - source:
            namespaces: ["bar"]
      to:
        - operation:
            ports: ["80"]
